<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpFragment">


    <RelativeLayout

        android:id="@+id/activityMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/burger3">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#43FFFFFF"
            app:cardCornerRadius="7dp"
            app:cardElevation="22dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/showError"
                    style="@style/TextStyle.Heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:gravity="center"
                    android:minHeight="46dp"
                    android:text="@string/signup"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/RG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="3.5dp"
                    android:background="#6AFFFFFF"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RadioButton
                        android:id="@+id/customerRB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:minHeight="46dp"
                        android:text="@string/customer"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/waiterRB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:minHeight="46dp"
                        android:text="@string/waiter"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck" />
                </RadioGroup>

                <EditText
                    android:id="@+id/etFullName"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="8dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_bg"
                    android:backgroundTint="#43FFFFFF"
                    android:ems="10"
                    android:hint="@string/your_name"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp" />


                <EditText
                    android:id="@+id/etMobile"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="8dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_bg"
                    android:backgroundTint="#43FFFFFF"
                    android:ems="10"
                    android:hint="@string/mobile_number"
                    android:inputType="textPersonName"
                    android:padding="10dp" />


                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="8dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_bg"
                    android:backgroundTint="#43FFFFFF"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    tools:ignore="TextFields" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        style="@style/InputTextStyle"
                        android:backgroundTint="#43FFFFFF"
                        android:inputType="textPassword"
                        android:minHeight="56dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etConfirmPass"
                        style="@style/InputTextStyle"
                        android:backgroundTint="#43FFFFFF"
                        android:inputType="textPassword"
                        android:minHeight="56dp" />

                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:background="@drawable/btn_bg"
                    android:text="@string/signup"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/haveAcc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="-20dp"
                    android:padding="10dp"
                    android:text="@string/already_have_an_account"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress_signup"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>
