<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:elevation="5dp"
        app:cardMaxElevation="2dp"
        app:cardCornerRadius="5dp">
        <LinearLayout
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/orderImageId"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/burgerking"
                android:contentDescription="@string/todo">

            </ImageView>

            <LinearLayout
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>

                <TextView
                    android:id="@+id/currentdate"
                    android:layout_width="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_10_30"
                    android:textColor="#979797"
                    android:textAlignment="textEnd"
                    android:layout_marginStart="12sp" />
                <TextView
                    android:id="@+id/orderItemNameId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12sp"
                    android:text="@string/foodname"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginStart="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:orientation="horizontal"
                    android:layout_marginStart="12dp">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:orientation="horizontal"
                    android:layout_marginStart="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/price"
                        android:paddingBottom="5dp"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/doloar"
                        android:textAlignment="center"
                        android:textColor="@color/red"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/orderPriceId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_5_50"
                        android:textColor="@color/red"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_height="wrap_content">
                    <Button
                        android:layout_margin="2dp"
                        android:layout_width="wrap_content"
                        android:text="Accept"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:layout_margin="2dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Done" />

                </LinearLayout>



            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>